--- a/WhatsApp/app/src/main/res/layout/adapter_mensagem_destinatario.xml
+++ b/WhatsApp/app/src/main/res/layout/adapter_mensagem_destinatario.xml
@@ -16,6 +16,14 @@
         android:backgroundTint="@color/balaoDestinatario"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/textNomeExibicao"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Gabriel Tangerina"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
         <ImageView
             android:id="@+id/imageMensagemFoto"
             android:layout_width="wrap_content"
@@ -27,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView"
-            android:textSize="18sp" />
+            android:textSize="16sp" />
 
     </LinearLayout>
 
