--- a/OrderExpressApp/app/src/main/res/layout/activity_login.xml
+++ b/OrderExpressApp/app/src/main/res/layout/activity_login.xml
@@ -85,7 +85,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:paddingBottom="15dp"
         android:text="Fazer cadastro"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
