--- a/WhatsApp/app/src/main/res/layout/content_chat.xml
+++ b/WhatsApp/app/src/main/res/layout/content_chat.xml
@@ -33,14 +33,13 @@
             android:layout_width="0dp"
             android:layout_height="35dp"
             android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
             android:background="@drawable/fundo_mensagem_chat"
             android:elevation="5dp"
             android:ems="10"
             android:inputType="text"
             android:paddingLeft="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/imageCamera"
+            app:layout_constraintEnd_toStartOf="@+id/imageButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -56,6 +55,20 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_camera_cinza" />
+
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/imageCamera"
+            app:layout_constraintStart_toEndOf="@+id/editMensagem"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_clips" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
