--- a/OrderExpressApp/app/src/main/res/layout/carrinho_alert_dialog.xml
+++ b/OrderExpressApp/app/src/main/res/layout/carrinho_alert_dialog.xml
@@ -65,21 +65,22 @@
 
         <TextView
             android:id="@+id/textView9"
-            android:layout_width="match_parent"
+            android:layout_width="367dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Preço Unidade"
             android:textSize="16sp" />
 
-        <EditText
+        <TextView
             android:id="@+id/editPrecoUnidade"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:ems="10"
-            android:hint="Preço..."
-            android:inputType="numberDecimal"
-            android:textSize="16sp" />
+            android:gravity="right"
+            android:paddingRight="20dp"
+            android:text="TextView"
+            android:textSize="16sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
